--- a/index.html
+++ b/index.html
@@ -60,17 +60,19 @@
         <!-- Showcase -->
         <header id="showcase">
             <div class="container">
-                <div class="category category-lunch">Lunch</div>
-                <h1>Shaved Carrot and Parsley Salad</h1>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Ratione aliquid dolores laborum aspernatur soluta, eos
-                    ducimus quaerat dicta voluptate? Itaque molestias
-                    repellendus, excepturi debitis sit accusantium amet
-                    consequatur illum maiores sequi ipsa. Temporibus fugit culpa
-                    autem delectus voluptates pariatur fugiat?
-                </p>
-                <a href="#" class="btn">Read More</a>
+                <div class="showcase-container">
+                    <div class="category category-lunch">Lunch</div>
+                    <h1>Shaved Carrot and Parsley Salad</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Ratione aliquid dolores laborum aspernatur soluta,
+                        eos ducimus quaerat dicta voluptate? Itaque molestias
+                        repellendus, excepturi debitis sit accusantium amet
+                        consequatur illum maiores sequi ipsa. Temporibus fugit
+                        culpa autem delectus voluptates pariatur fugiat?
+                    </p>
+                    <a href="#" class="btn">Read More</a>
+                </div>
             </div>
         </header>
     </body>
