Card grid, updated navbar & showcase
Implemented card grid (for recipes - articles)
Background now always appears behind navbar
Added dishes images

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <header id="showcase">
             <div class="container">
                 <div class="showcase-container">
-                    <div class="category category-lunch">Lunch</div>
+                    <div class="category category-salads">Salads</div>
                     <h1>Shaved Carrot and Parsley Salad</h1>
                     <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing
@@ -71,9 +71,174 @@
                         consequatur illum maiores sequi ipsa. Temporibus fugit
                         culpa autem delectus voluptates pariatur fugiat?
                     </p>
-                    <a href="#" class="btn">Read More</a>
+                    <a href="article.html" class="btn"><i class="fas fa-chevron-right"></i> Read More</a>
                 </div>
             </div>
         </header>
+
+        <!-- Recipes -->
+        <section id="recipes">
+            <div class="container">
+                <h2>Chef 's Picks</h2>
+                <div class="recipes-container">
+                    <article class="card">
+                        <a href="article.html"><img
+                            src="img/recipes/lunch1.jpg"
+                            alt="Vareniki Pelmeni"
+                        />
+                        <div>
+                            <div class="category category-lunch">Lunch</div>
+                            <h3>
+                                <a href="article.html">Vareniki Pelmeni</a>
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Modi ut voluptatibus autem
+                                ipsam voluptatum aliquam architecto? Quia rem ut
+                                dolorum.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="card">
+                        <a href="article.html">
+                            <img
+                                src="img/recipes/appetizers1.png"
+                                alt="Shish Kebab"
+                        /></a>
+                        <div>
+                            <div class="category category-appetizers">
+                                Appetizers
+                            </div>
+                            <h3>
+                                <a href="article.html">Shish Kebab</a>
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Quos deserunt iste delectus
+                                obcaecati omnis consequatur natus quo earum,
+                                alias cum sed culpa, expedita aut ipsam, quidem
+                                sint commodi. Fuga, placeat?
+                            </p>
+                        </div>
+                    </article>
+                    <article class="card">
+                        <a href="article.html"><img
+                            src="img/recipes/salads1.png"
+                            alt="Raw Food Salad"
+                        /></a>
+                        <div>
+                            <div class="category category-salads">Salads</div>
+                            <h3>
+                                <a href="article.html">Raw Food Salad</a>
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Excepturi dolore quibusdam rem
+                                voluptates asperiores vero.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="card">
+                        <a href="article.html"><img
+                            src="img/recipes/beverages1.png"
+                            alt="Picture of wines"
+                        /></a>
+                        <div>
+                            <div class="category category-beverages">
+                                Beverages
+                            </div>
+                            <h3>
+                                <a href="article.html">Which wine to serve?</a>
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Saepe dolorum quas repellat
+                                quo error velit impedit quae consectetur qui,
+                                magni unde fuga cumque voluptate consequuntur.
+                                Officiis non, porro ex in temporibus quo sint,
+                                blanditiis fugit aperiam ducimus nostrum minus
+                                fugiat.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="card">
+                        <a href="article.html"><img src="img/recipes/soups1.png" alt="Pumpkin Soup" /></a>
+                        <div>
+                            <div class="category category-soups">Soups</div>
+                            <h3>
+                                <a href="article.html">Pumpkin Soup</a>
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Saepe accusantium ipsum harum
+                                ex! Quisquam, quibusdam!
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="card bg-dark">
+                        <a href="article.html"><img
+                            src="img/recipes/lunch2.png"
+                            alt="Fresh Fettuccine Pasta"
+                        /></a>
+                        <div>
+                            <div class="category category-lunch">Lunch</div>
+                            <h3>
+                                <a href="article.html"
+                                    >Fresh Fettuccine Pasta</a
+                                >
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur,
+                                adipisicing elit. Qui nostrum alias sapiente
+                                suscipit inventore ea labore, debitis, obcaecati
+                                necessitatibus, fugit aliquid provident!
+                            </p>
+                        </div>
+                    </article>
+                    <article class="card">
+                        <a href="article.html"><img
+                            src="img/recipes/breakfast1.png"
+                            alt="Maple Syrup Pancakes"
+                        /></a>
+                        <div>
+                            <div class="category category-breakfast">
+                                Breakfast
+                            </div>
+                            <h3>
+                                <a href="article.html">Maple Syrup Pancakes</a>
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sequi in placeat illo cumque,
+                                delectus nesciunt magni dolorem vitae
+                                repellendus eos explicabo eius dicta quam dolor
+                                reiciendis quae voluptas?
+                            </p>
+                        </div>
+                    </article>
+                    <article class="card">
+                        <a href="article.html"><img src="img/recipes/desserts1.jpg" alt="Apple Pie" /></a>
+                        <div>
+                            <div class="category category-desserts">
+                                Desserts
+                            </div>
+                            <h3>
+                                <a href="article.html">Apple Pie</a>
+                            </h3>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Amet velit, eius, tempora
+                                officiis laboriosam magni voluptate perspiciatis
+                                sint quidem recusandae earum tempore, iure
+                                aspernatur enim molestias reprehenderit
+                                accusamus distinctio!
+                            </p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
