Minor showcase, button fixes, logo update
Fixed z-index issues in showcase
Fixed buttons not appearing correctly in Firefox
Prettier logo (better visible outline)

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                         consequatur illum maiores sequi ipsa. Temporibus fugit
                         culpa autem delectus voluptates pariatur fugiat?
                     </p>
-                    <a href="article.html" class="btn"><i class="fas fa-chevron-right"></i> Read More</a>
+                    <a href="article.html" class="btn"
+                        ><i class="fas fa-chevron-right"></i> Read More</a
+                    >
                 </div>
             </div>
         </header>
@@ -82,10 +84,11 @@
                 <h2>Chef 's Picks</h2>
                 <div class="recipes-container">
                     <article class="card">
-                        <a href="article.html"><img
-                            src="img/recipes/lunch1.jpg"
-                            alt="Vareniki Pelmeni"
-                        />
+                        <a href="article.html"
+                            ><img
+                                src="img/recipes/lunch1.jpg"
+                                alt="Vareniki Pelmeni"
+                        /></a>
                         <div>
                             <div class="category category-lunch">Lunch</div>
                             <h3>
@@ -123,9 +126,10 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a href="article.html"><img
-                            src="img/recipes/salads1.png"
-                            alt="Raw Food Salad"
+                        <a href="article.html"
+                            ><img
+                                src="img/recipes/salads1.png"
+                                alt="Raw Food Salad"
                         /></a>
                         <div>
                             <div class="category category-salads">Salads</div>
@@ -140,9 +144,10 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a href="article.html"><img
-                            src="img/recipes/beverages1.png"
-                            alt="Picture of wines"
+                        <a href="article.html"
+                            ><img
+                                src="img/recipes/beverages1.png"
+                                alt="Picture of wines"
                         /></a>
                         <div>
                             <div class="category category-beverages">
@@ -163,7 +168,11 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a href="article.html"><img src="img/recipes/soups1.png" alt="Pumpkin Soup" /></a>
+                        <a href="article.html"
+                            ><img
+                                src="img/recipes/soups1.png"
+                                alt="Pumpkin Soup"
+                        /></a>
                         <div>
                             <div class="category category-soups">Soups</div>
                             <h3>
@@ -178,9 +187,10 @@
                     </article>
 
                     <article class="card bg-dark">
-                        <a href="article.html"><img
-                            src="img/recipes/lunch2.png"
-                            alt="Fresh Fettuccine Pasta"
+                        <a href="article.html"
+                            ><img
+                                src="img/recipes/lunch2.png"
+                                alt="Fresh Fettuccine Pasta"
                         /></a>
                         <div>
                             <div class="category category-lunch">Lunch</div>
@@ -198,9 +208,10 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a href="article.html"><img
-                            src="img/recipes/breakfast1.png"
-                            alt="Maple Syrup Pancakes"
+                        <a href="article.html"
+                            ><img
+                                src="img/recipes/breakfast1.png"
+                                alt="Maple Syrup Pancakes"
                         /></a>
                         <div>
                             <div class="category category-breakfast">
@@ -219,7 +230,11 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a href="article.html"><img src="img/recipes/desserts1.jpg" alt="Apple Pie" /></a>
+                        <a href="article.html"
+                            ><img
+                                src="img/recipes/desserts1.jpg"
+                                alt="Apple Pie"
+                        /></a>
                         <div>
                             <div class="category category-desserts">
                                 Desserts
