--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="links">
                         <li><a href="index.html" class="current">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="recipes.html">Recipes</a></li>
+                        <li><a href="#recipes">Recipes</a></li>
                         <li><a href="#subscribe">Subscribe</a></li>
                     </div>
                 </ul>
@@ -210,6 +210,26 @@
                     <article class="card">
                         <a href="article.html"
                             ><img
+                                src="img/recipes/desserts1.jpg"
+                                alt="Apple Pie"
+                        /></a>
+                        <div>
+                            <div class="category category-desserts">
+                                Desserts
+                            </div>
+                            <h3>
+                                <a href="article.html">Apple Pie</a>
+                            </h3>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Amet velit, eius, tempora
+                                officiis laboriosam magni voluptate.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="card">
+                        <a href="article.html"
+                            ><img
                                 src="img/recipes/breakfast1.png"
                                 alt="Maple Syrup Pancakes"
                         /></a>
@@ -229,31 +249,54 @@
                             </p>
                         </div>
                     </article>
-                    <article class="card">
-                        <a href="article.html"
-                            ><img
-                                src="img/recipes/desserts1.jpg"
-                                alt="Apple Pie"
-                        /></a>
-                        <div>
-                            <div class="category category-desserts">
-                                Desserts
-                            </div>
-                            <h3>
-                                <a href="article.html">Apple Pie</a>
-                            </h3>
-                            <p>
-                                Lorem, ipsum dolor sit amet consectetur
-                                adipisicing elit. Amet velit, eius, tempora
-                                officiis laboriosam magni voluptate perspiciatis
-                                sint quidem recusandae earum tempore, iure
-                                aspernatur enim molestias reprehenderit
-                                accusamus distinctio!
-                            </p>
-                        </div>
-                    </article>
                 </div>
             </div>
         </section>
+
+        <!-- Footer -->
+        <footer id="main-footer">
+            <div class="container">
+                <div>
+                    <img src="img/logo.png" alt="MyCookingBlog" />
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Qui est, sed similique sint iure voluptates
+                        laudantium voluptatem eum nostrum assumenda! Ut, sed
+                        dolorem. Omnis, consectetur?
+                    </p>
+                </div>
+                <div>
+                    <h3>Subscribe to our newsletter</h3>
+                    <p>You will receive weekly recipes in your e-mail inbox.</p>
+                    <form action="submit.php">
+                        <input
+                            type="email"
+                            name="email"
+                            id="email"
+                            placeholder="Enter Email..."
+                        />
+                        <input type="submit" value="Subscribe" class="btn" />
+                    </form>
+                </div>
+                <div>
+                    <h3>Site Links</h3>
+                    <ul class="list">
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <p>
+                        Design by
+                        <span
+                            ><a href="https://github.com/krisp3t"
+                                >krisp3t</a
+                            ></span
+                        >
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
