Added container utilities, About improvements, shadow variables

--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
             sizes="16x16"
             href="/favicon-16x16.png"
         />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <link rel="manifest" href="/site.webmanifest" />
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
         <meta name="msapplication-TileColor" content="#2b5797" />
@@ -52,7 +53,7 @@
                     <div class="links">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html" class="current">About</a></li>
-                        <li><a href="#recipes">Recipes</a></li>
+                        <li><a href="index.html#recipes">Recipes</a></li>
                         <li><a href="#subscribe">Subscribe</a></li>
                     </div>
                 </ul>
@@ -80,7 +81,7 @@
         <!-- About -->
         <section id="about">
             <div class="container">
-                <div class="page-container">
+                <div class="grid-container">
                     <article class="card">
                         <h1>About My Blog</h1>
                         <p>
@@ -104,52 +105,42 @@
                             mollitia rem dolores tempore sunt?
                         </p>
                         <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Ullam, quia quam? Dicta optio incidunt facilis
+                            esse architecto quidem similique dolores? Eius nemo
+                            ipsam temporibus, earum aperiam nihil nisi? Facilis
+                            vel cum suscipit placeat doloremque quod, delectus
+                            aspernatur, est ullam possimus dicta voluptatem ad
+                            quibusdam tenetur. In voluptatem fugiat velit enim
+                            eos! Minus cupiditate sint rem quo quae omnis, eum
+                            quam exercitationem natus fugit fugiat sed sapiente
+                            nemo consequuntur a veniam sit vero laboriosam quod
+                            autem. Vel itaque excepturi accusamus vitae, ipsa
+                            blanditiis tempora corporis soluta, maxime labore
+                            rerum officiis culpa. Consectetur in id ab. Ipsum
+                            temporibus quos reiciendis vel unde.
+                        </p>
+                        <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Voluptate voluptatem sint esse. Nemo nesciunt
-                            aliquam dolor natus incidunt odit debitis mollitia
-                            vel, repudiandae quisquam placeat, fugiat voluptate,
-                            odio itaque eveniet voluptates. Illum tenetur fugit
-                            voluptatum, saepe quidem consectetur sint
-                            voluptatibus rerum animi voluptates doloribus, iusto
-                            nesciunt perspiciatis. Explicabo facere mollitia,
-                            eveniet velit consectetur quo aperiam repellendus
-                            quae nostrum. Mollitia, harum cumque. Facere,
-                            voluptates eveniet non, porro doloribus dolores quam
-                            optio officiis sed adipisci odio. Ratione distinctio
-                            alias, doloremque impedit consectetur ea quos
-                            inventore temporibus eos laboriosam hic molestias et
-                            corporis maxime voluptas animi nemo itaque tenetur
-                            non facilis magni aspernatur labore? Ut neque ex
-                            impedit? Nesciunt eaque sequi blanditiis quidem
-                            cumque beatae ipsa sint officiis itaque quibusdam
-                            molestias, voluptatibus illo quasi! Doloremque
-                            aperiam, saepe ea quod labore optio minus explicabo
-                            natus dolorem praesentium vero odit possimus nostrum
-                            nam sunt et ullam ad! Non aut minima architecto
-                            aspernatur labore totam voluptatibus praesentium
-                            eaque rem ea sunt amet dignissimos quisquam et culpa
-                            ipsum vero animi, tenetur quibusdam temporibus est?
-                            Obcaecati esse totam, dicta a eius voluptates? Eaque
-                            quisquam nam provident suscipit est a officiis
-                            corrupti reiciendis! Labore cupiditate voluptatem
-                            velit modi dicta corporis dolor doloribus sunt
-                            itaque repellendus sint architecto, fugiat, ea
-                            accusamus a? Inventore veniam nihil totam nemo
-                            asperiores, recusandae obcaecati nam dolorum at
-                            reiciendis eaque possimus cupiditate, accusamus
-                            soluta beatae quidem dicta. Nihil autem quam fugit
-                            rem minus? Sapiente fuga ipsum quos velit delectus
-                            veritatis doloribus dolores voluptate a, error aut
-                            quo, similique accusantium eos neque provident quam
-                            eum ex amet laboriosam, beatae iste culpa? Incidunt
-                            exercitationem architecto alias, sint facere quo
-                            quod quibusdam excepturi accusamus iusto, assumenda
-                            consequuntur! Ducimus adipisci ea maxime rem?
-                            Perferendis dignissimos natus sed possimus itaque.
-                            Maxime fugiat nihil dolorem, repellendus molestiae
-                            doloremque culpa voluptatum in hic, ullam
-                            voluptates, commodi a quisquam quo deserunt dolores
-                            neque.
+                            elit. Libero laudantium suscipit labore mollitia ut
+                            qui laboriosam pariatur soluta ipsum ullam, nam
+                            commodi porro quod ab illum perferendis
+                            exercitationem illo, quos expedita molestias
+                            incidunt. Repudiandae, corporis, voluptates
+                            reiciendis aut architecto ipsa voluptatem sed sunt
+                            enim magni, aspernatur fugit sequi autem adipisci.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Ea quas omnis minus! Possimus, vero. Nulla
+                            eius nemo molestias facere eaque dolores eos tempora
+                            quia porro obcaecati itaque dolorem, totam, ab,
+                            aliquid veritatis unde est modi molestiae minus
+                            asperiores error cumque aliquam aperiam. Eos, autem
+                            beatae enim odio hic, placeat doloribus minus
+                            quisquam veniam cumque corrupti porro asperiores est
+                            repellat. Quaerat cum aut quae blanditiis porro
+                            cupiditate! Libero a nulla expedita.
                         </p>
                     </article>
                     <article class="card bg-primary about-me">
@@ -172,7 +163,7 @@
 
         <!-- Footer -->
         <footer id="main-footer">
-            <div class="container">
+            <div class="grid-container">
                 <div>
                     <img src="img/logo.png" alt="MyCookingBlog" />
                     <p>
