--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <section id="recipes">
             <div class="container">
                 <h2>Chef 's Picks</h2>
-                <div class="recipes-container">
+                <div class="grid-container">
                     <article class="card">
                         <a href="article.html"
                             ><img
@@ -276,7 +276,7 @@
 
         <!-- Footer -->
         <footer id="main-footer">
-            <div class="container">
+            <div class="grid-container">
                 <div>
                     <img src="img/logo.png" alt="MyCookingBlog" />
                     <p>
