--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <meta name="theme-color" content="#ffffff" />
         <title>My Cooking Blog | About</title>
     </head>
-    <body id="about">
+    <body id="about-page">
         <!-- Navbar -->
         <nav id="main-nav">
             <div class="container">
@@ -68,16 +68,16 @@
                     </div>
                 </ul>
                 <div class="social">
-                    <a href="http://twitter.com" target="_blank"
+                    <a href="https://twitter.com" target="_blank"
                         ><i class="fab fa-twitter fa-2x"></i
                     ></a>
-                    <a href="http://facebook.com" target="_blank"
+                    <a href="https://facebook.com" target="_blank"
                         ><i class="fab fa-facebook fa-2x"></i
                     ></a>
-                    <a href="http://instagram.com" target="_blank"
+                    <a href="https://instagram.com" target="_blank"
                         ><i class="fab fa-instagram fa-2x"></i
                     ></a>
-                    <a href="http://youtube.com" target="_blank"
+                    <a href="https://youtube.com" target="_blank"
                         ><i class="fab fa-youtube fa-2x"></i
                     ></a>
                 </div>
@@ -89,7 +89,7 @@
         </nav>
 
         <!-- About -->
-        <section id="about-blog">
+        <section class="grid-template" id="about">
             <div class="container">
                 <div class="grid-container">
                     <article class="card">
