--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <meta name="msapplication-TileColor" content="#2b5797" />
         <meta name="theme-color" content="#ffffff" />
     </head>
-    <body id="index">
+    <body id="index-page">
         <!-- Navbar -->
         <nav id="main-nav">
             <div class="container">
@@ -68,16 +68,16 @@
                     </div>
                 </ul>
                 <div class="social">
-                    <a href="http://twitter.com" target="_blank"
+                    <a href="https://twitter.com" target="_blank"
                         ><i class="fab fa-twitter fa-2x"></i
                     ></a>
-                    <a href="http://facebook.com" target="_blank"
+                    <a href="https://facebook.com" target="_blank"
                         ><i class="fab fa-facebook fa-2x"></i
                     ></a>
-                    <a href="http://instagram.com" target="_blank"
+                    <a href="https://instagram.com" target="_blank"
                         ><i class="fab fa-instagram fa-2x"></i
                     ></a>
-                    <a href="http://youtube.com" target="_blank"
+                    <a href="https://youtube.com" target="_blank"
                         ><i class="fab fa-youtube fa-2x"></i
                     ></a>
                 </div>
